test/tests/operators/write_kv/error_empty_list_separator.txt
error: `list_separator` must not be empty
 --> tests/operators/write_kv/error_empty_list_separator.tql:6:25
  |
6 | write_kv list_separator=""
  |                         ^^ 
  |
